src/index.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  // Roboto
  font-family: 'Roboto', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
  // @apply bg-primary;
  background: #111213;
  height: 100vh;
}

#root {
  height: 100%;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

button {
  @apply bg-tertiary;
  color: white;
  border: none;
  border-radius: 5px;
  padding: 5px 10px;
  cursor: pointer;
}

input {
  @apply rounded-md text-black;
}

// Scroll bars
::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background: #181a1b;
  border-radius: 0.375rem;

}

::-webkit-scrollbar-thumb {
  @apply bg-secondary;
  border-radius: 0.375rem;

  max-width: 5px;

  &:hover {
    @apply bg-tertiary;
    max-width: 10px;
  }

}

::-webkit-scrollbar-thumb:hover {
  background: #555;
}

.background_haze {
  background: radial-gradient(37.28% 42.79% at 37.05% 40.5%, rgba(17, 18, 19, 0) 0, #111213 100%),
    radial-gradient(22.93% 22.93% at 36.42% 43.93%, #331d3b 0, rgba(51, 29, 59, 0) 100%),
    conic-gradient(from 180deg at 34.37% 42.14%, #331c30 0deg, #2f1b3f 84.38deg, #1a1a6c 247.5deg, #351b2f 1turn),
    #111213;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -2;
}

.header {
  background: #111213;
  padding-top: 8px;
  padding-bottom: 0px;

  &>ul>.tab {
    padding: 12px 24px;
    background: #111213;
    border: 1px solid transparent;
    transform: translate(0, 1px);

    position: relative;

    &>::after {
      content: "";
      position: absolute;
      bottom: -1px; // Account for border
      left: 0;
      right: 0;
      height: 1px;
      transform: scaleX(1.1);
      border-bottom: 1px solid rgb(107 114 128);
    }

    &>:hover {
      color: #bbb;
    }
  }

  &>ul>.active-tab {
    border-top: 1px solid rgb(107 114 128);
    border-right: 1px solid rgb(107 114 128);
    border-left: 1px solid rgb(107 114 128);
    border-bottom: 1px solid #111213;
    border-radius: 0.25rem 0.25rem 0 0;

    &>::after {
      border: transparent;
    }
  }
}

.recipesContainer {
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  gap: 16px;

  &>* {
    max-height: 85vh;
    overflow: auto;
  }
}

.searchContainer {
  width: 28px;
  height: 28px;
  position: relative;
  transition: 0.50s;
  margin-bottom: 20px;

  &>* {
    position: absolute;
  }

  &>input {
    opacity: 0;
    width: 100%;
    transition: 0.50s;
  }

  &>svg {
    width: 28px;
    height: 28px;
  }

  &:hover,
  &:has(input:not(:placeholder-shown)) {
    &>svg {
      opacity: 0;
    }

    &>input {
      opacity: 1;
    }

    width: 300px;
    transition: 0.50s;
  }
}

.indicator {
  transition: 500ms;
  position: absolute;
  top: 0;
  bottom: 0;
  width: 50%;
  height: 100%;
  right: 50%;

  // Rounded on left, square on right
  border-radius: 50% 0 0 50%;
}

.indicator-false {
  right: 0;

  // Rounded on right, square on left
  border-radius: 0 50% 50% 0;
}

.recipeCard {
  transition: .5s;
  position: relative;
  display: flex;
  // min-height: 150px;

  &:hover {
    &::before {
      content: "";
      position: absolute;
      @apply rounded-md;

      top: 0;
      left: 0;
      right: 0;
      bottom: 0;

      background: rgba(0, 0, 0, 0.5);
    }

    // padding: 20px;
    // min-height: 190px;
  }
}

.recipeCard-content {
  margin: auto;
}

.recipeExplorer {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  overflow: auto;
}

